# tray-ticker

./: LICENSE
tray-ticker/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
tray-ticker/.cargo/: config.toml
tray-ticker/assets/: app.manifest  app.rc
tray-ticker/scripts/: build-release.ps1  make_release_zip.ps1
tray-ticker/src/: app.rs  autostart.rs  chart.rs  config.rs  data.rs  icon.rs  instance_guard.rs  logging.rs  main.rs  paths.rs  poller.rs
tray-ticker/tests/fixtures/: aapl_1d.json
