[package]
name = "tray-ticker"
version = "0.1.1"
edition = "2021"
description = "Windows 11 system tray stock ticker with Yahoo Finance"
license = "MIT"
repository = "https://github.com/example/tray-ticker"

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts",
    "glow",
] }
egui_plot = "0.31"
tray-icon = "0.22"
ureq = { version = "2.12", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fontdue = "0.9"
directories = "5"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
single-instance = "0.3"
winreg = "0.52"
simplelog = "0.12"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
urlencoding = "2.1"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["ico", "png"] }

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
